components/policies/production/base/konflux-rbac/deny-serviceaccount-token-secrets/deny-serviceaccount-token-secrets-validationadmissionpolicybinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deny-serviceaccount-token-secrets.konflux-ci.dev
spec:
  policyName: "deny-serviceaccount-token-secrets.konflux-ci.dev"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        konflux-ci.dev/type: tenant
